docs: expand and refine development guidelines for various frameworks and technologies.